Fixed dependency conflicts and compilation errors